// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AbstractTag renders with base props for 'dropdown' type 1`] = `
<span
  className="lab-tag lab-tag--dropdown lab-tag--pale"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="presentation"
>
  Test DropdownTag
  <span
    className="lab-tag__dropdown-icon-wrapper"
  >
    <span
      className="lab-icon lab-icon--dropdown-closed lab-icon--black75 lab-icon--petit lab-icon--dropdown-icon"
    />
  </span>
</span>
`;

exports[`AbstractTag renders with base props for 'removable' type 1`] = `
<span
  className="lab-tag lab-tag--removable lab-tag--pale"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="presentation"
>
  Test RemovableTag
  <span
    className="lab-tag__remove-icon-wrapper"
  >
    <span
      className="lab-icon lab-icon--remove lab-icon--black75 lab-icon--petit lab-icon--remove-icon"
    />
  </span>
</span>
`;

exports[`AbstractTag renders with base props for 'simple' type 1`] = `
<span
  className="lab-tag lab-tag--pale"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="presentation"
>
  Test SimpleTag
</span>
`;

exports[`AbstractTag renders with base props for 'togglable' type 1`] = `
<span
  className="lab-tag lab-tag--togglable lab-tag--pale"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="presentation"
>
  Test TogglableTag
</span>
`;
